improve recommended items

--- a/_includes/add-to-fertilizer-itemlist-table.html
+++ b/_includes/add-to-fertilizer-itemlist-table.html
@@ -1,18 +1,21 @@
-<table class="table table-bordered table-striped table-dark" id="{{include.id}}">
+<div class="table-responsive table-inventory">
+  <table class="table table-bordered table-striped table-dark dt-responsive nowrap" id="{{include.id}}"
+    style="width:100%">
     <thead>
       <tr>
-        <th scope="col" class="w-item-icon">Add to Fer.</th>
-        <th scope="col">Name</th>
+        <th scope="col" class="w-item-icon" data-priority="0">Add to Fer.</th>
+        <th scope="col" data-priority="1">Name</th>
 
-        <th scope="col">Imm.</th>
-        <th scope="col">Pes.</th>
-        <th scope="col">Her.</th>
+        <th scope="col" data-priority="4">Imm.</th>
+        <th scope="col" data-priority="5">Pes.</th>
+        <th scope="col" data-priority="6">Her.</th>
 
-        <th scope="col">Tox.</th>
+        <th scope="col" data-priority="3">Tox.</th>
 
-        <th scope="col">Ex.</th>
+        <th scope="col" data-priority="2">Ex.</th>
       </tr>
     </thead>
     <tbody>
     </tbody>
   </table>
+</div>
