--- a/_includes/credit.html
+++ b/_includes/credit.html
@@ -6,3 +6,5 @@ Double check Items with <a href="https://docs.google.com/spreadsheets/d/1IVwxTv6
 <br />
 <a href="https://www.youtube.com/watch?v=bXKrfWCHUtU" target="_blank"><i class="fab fa-youtube"></i> ULTIMATE Rice Farming Guide for Beginners</a> by <a href="https://www.youtube.com/channel/UCtR-AuOdfGd26lRUD2CM8Cg" target="blank">Swrinny</a></br />
 <a href="https://www.reddit.com/r/sakunaofriceandruin/comments/k18q1i/sakuna_database/" target="_blank"><i class="fab fa-reddit"></i> Sakuna-Database-Spreadsheet</a> by <a href="https://www.reddit.com/user/WaafleCat" target="_blank">u/WaafleCat</a></br />
+<br/>
+Framing-Guide with some tips from Swrinnys video, my own experience and studying the Farming Scrolls.
