--- a/_includes/guide-aroma.html
+++ b/_includes/guide-aroma.html
@@ -6,10 +6,10 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.tilling.sort_rice.lightly }}
+                    {{ site.data.strings.guide.tilling.sort_rice.thoroughly }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.tilling.sow_rice.thoroughly }}
+                    {{ site.data.strings.guide.tilling.sow_rice.thinly }}
                 </li>
                 <li class="list-group-item">
                     {{ site.data.strings.guide.tilling.use_root_fertilizer }}
