refactor strings change LICENSE

--- a/_includes/guide-aesthic.html
+++ b/_includes/guide-aesthic.html
@@ -2,7 +2,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-winter">
             <div class="card-header">
-                Before Planting/Tilling
+                {{ site.data.strings.guide.tilling.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -23,7 +23,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-spring">
             <div class="card-header">
-                Planting (Raising Seedlings)
+                {{ site.data.strings.guide.planting.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -38,7 +38,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-spring">
             <div class="card-header">
-                After Planting (Seedlings)
+                {{ site.data.strings.guide.after_planting.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -52,7 +52,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-summer">
             <div class="card-header">
-                1st/2nd Offshoots
+                {{ site.data.strings.guide.offshots_1_2.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -70,7 +70,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-summer">
             <div class="card-header">
-                3nd Offshoots
+                {{ site.data.strings.guide.offshots_3.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -88,7 +88,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-summer">
             <div class="card-header">
-                Sprouting
+                {{ site.data.strings.guide.sprouting.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -105,7 +105,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-autumn">
             <div class="card-header">
-                Harvest (Ripen)
+                {{ site.data.strings.guide.ripen.harvest.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -123,7 +123,7 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-autumn">
             <div class="card-header">
-                After Harvest (Ripen)
+                {{ site.data.strings.guide.ripen.after_harvest.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -138,14 +138,14 @@
     <div class="col-md-4 p-1">
         <div class="card farming-guide-autumn">
             <div class="card-header">
-                Rice in Storehouse (Ripen)
+                {{ site.data.strings.guide.ripen.rice_in_storehouse.title }}
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.ripen.thresh.when_cool }}
+                    {{ site.data.strings.guide.ripen.rice_in_storehouse.thresh.when_cool }}
                 </li>
                 <li class="list-group-item">
-                    {{ site.data.strings.guide.ripen.hulling.brown_or_white_rice }}
+                    {{ site.data.strings.guide.ripen.rice_in_storehouse.hulling.brown_or_white_rice }}
                 </li>
             </ul>
         </div>
