--- a/_includes/guide-space.html
+++ b/_includes/guide-space.html
@@ -29,7 +29,7 @@
                 <ul class="list-group">
                     <li class="list-group-item">Stand at the <span class="text-red-line">red line</span> for
                         <strong>1x1</strong> placements.</li>
-                    <li class="list-group-item">Stand at the <span class="text-skyblue-line">skyblue line</span> for
+                    <li class="list-group-item">Stand at the <span class="text-turquoise-line">turquoise line</span> for
                         <strong>2x1</strong> placements.<br /> <small>("Two by Two Planting"-Skill)</small></li>
                     <li class="list-group-item">Stand at the <span class="text-springgreen-line">springgreen line</span>
                         for <strong>4x4</strong> placements.<br /> <small>("Four Corner Planting"-Skill)</small></li>
