--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -165,7 +165,7 @@ ul.pagination {
         background-color: lighten(#9b3cdb, 10%) !important;
     }
 }
-.pills-text {
+.aroma-text {
     color: #9b3cdb !important;
 }
 
