update input events

--- a/_includes/guide-space.html
+++ b/_includes/guide-space.html
@@ -1,5 +1,5 @@
 <div class="row no-gutters mt-3">
-    <div class="col-12 ml-1">
+    <div class="col-12">
         <nav>
             <div class="nav nav-tabs" id="nav-tab-spacing" role="tablist">
                 <a class="nav-link px-3 active" id="nav-spacing-a-little-apart-tab" data-toggle="tab"
@@ -16,7 +16,7 @@
     <div class="col-12 tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="nav-spacing-a-little-apart" role="tabpanel"
             aria-labelledby="nav-spacing-a-little-apart-tab">
-            <div class="card">
+            <div class="card card-dark">
                 <img class="img-fluid card-img-top px-4"
                     src="{{ '/assets/img/1x2_4x4_little_far_apart.svg' | relative_url }}"
                     alt="space-a-little-far-apart">
@@ -26,7 +26,7 @@
                         Leave 1 square space in between 2 seedling.
                     </p>
                 </div>
-                <ul class="list-group">
+                <ul class="list-group list-group-flush">
                     <li class="list-group-item">Stand at the <span class="text-red-line">red line</span> for
                         <strong>1x1</strong> placements.</li>
                     <li class="list-group-item">Stand at the <span class="text-turquoise-line">turquoise line</span> for
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div class="tab-pane fade" id="nav-spacing-balanced" role="tabpanel" aria-labelledby="nav-spacing-balanced-tab">
-            <div class="card">
+            <div class="card card-dark">
                 <img class="img-fluid card-img-top px-4" src="{{ '/assets/img/balanced.svg' | relative_url }}"
                     alt="space-balanced">
                 <div class="card-body">
@@ -60,7 +60,7 @@
         </div>
         <div class="tab-pane fade" id="nav-spacing-circle-balanced" role="tabpanel"
             aria-labelledby="nav-spacing-circle-balanced-tab">
-            <div class="card">
+            <div class="card card-dark">
                 <img class="img-fluid card-img-top px-4" src="{{ '/assets/img/circle_balanced.svg' | relative_url }}"
                     alt="space-circle_balanced">
                 <div class="card-body">
