--- a/_includes/inventory-itemlist-table.html
+++ b/_includes/inventory-itemlist-table.html
@@ -1,5 +1,5 @@
 <div class="table-responsive table-inventory">
-  <table class="table table-bordered table-striped table-dark dt-responsive" id="{{include.id}}">
+  <table class="table dt-responsive text-black" id="{{include.id}}">
     <thead>
       <tr>
         <th scope="col" class="w-item-icon" data-priority="0" data-class-name="add-to-fertilizer">{{ site.data.strings.table.inventory.col_add_to_fertilizer }}</th>
