--- a/_includes/itemlist-table-content.html
+++ b/_includes/itemlist-table-content.html
@@ -12,7 +12,7 @@
   </th>
 
   {% if item.fertilizer_bonus.leaf_fertilizer or item.fertilizer_bonus.kernel_fertilizer or item.fertilizer_bonus.root_fertilizer %}
-  <td class="table-info">
+  <td class="table-success">
     {% if item.fertilizer_bonus.leaf_fertilizer %}
     {% if item.fertilizer_bonus.leaf_fertilizer > 0 %}
     {% assign fertilizer_bonus_color = "" %}
