--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -1,12 +1,12 @@
 <div class="row mt-2">
-    <div class="col-lg-6">
+    <div class="col-lg-6 pr-lg-2">
         <div class="card">
             <div class="card-header text-center">
                 {{ site.data.strings.fertilizer_helper.fertilizer.title }}
             </div>
             <div class="card-body p-0 p-lg-3">
                 <div class="row mt-2">
-                    <div class="col-lg-8">
+                    <div class="col-lg-7 pr-lg-2">
                         <div class="card">
                             <div class="card-header text-center">
                                 {{ site.data.strings.fertilizer_helper.fertilizer.soil_nutrients.title }}
@@ -24,7 +24,7 @@
                                     <input type="number" aria-label="Root" placeholder="Root" class="form-control"
                                         id="txtCurrentRootFertilizer" min="0" max="100">
                                 </div>
-                                <div class="d-none d-sm-block">
+                                <div class="d-none d-sm-block soil-nutrients-chart-container">
                                     <canvas class="soil-nutrients-chart" id="soilNutrientsChart"></canvas>
                                 </div>
                                 <div class="input-group">
@@ -43,46 +43,46 @@
                         </div>
 
                         <div class="row mt-2">
-                            <div class="col-4 yield_hp-label text-right">
+                            <div class="col-5 pr-0 yield-hp-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.yield_hp_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.yield_hp }}</span>
                             </div>
-                            <div class="col-2 yield_hp text-left" id="fertilizerYieldHp">0</div>
+                            <div class="col-2 yield-hp text-left" id="fertilizerYieldHp">0</div>
 
-                            <div class="col-4 immunuity-label text-right">
+                            <div class="col-3 pr-0 immunuity-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity }}</span>
                             </div>
                             <div class="col-2 immunuity text-left" id="fertilizerImmunuity">0</div>
                         </div>
                         <div class="row">
-                            <div class="col-4 taste-strength-label text-right">
+                            <div class="col-5 pr-0 taste-strength-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.taste_strength_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.taste_strength }}</span>
                             </div>
                             <div class="col-2 taste-strength text-left" id="fertilizerTasteStrength">0</div>
 
-                            <div class="col-4 pesticide-label text-right">
+                            <div class="col-3 pr-0 pesticide-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.pesticide_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.pesticide }}</span>
                             </div>
                             <div class="col-2 pesticide text-left" id="fertilizerPesticide">0</div>
                         </div>
                         <div class="row">
-                            <div class="col-4 hardness-vitality-label text-right">
+                            <div class="col-5 pr-0 hardness-vitality-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.hardness_vitality_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.hardness_vitality }}</span>
                             </div>
                             <div class="col-2 hardness-vitality text-left" id="fertilizerHardnessVitality">0</div>
 
-                            <div class="col-4 herbicide-label text-right">
+                            <div class="col-3 pr-0 herbicide-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.herbicide_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.herbicide }}</span>
                             </div>
                             <div class="col-2 herbicide text-left" id="fertilizerHerbicide">0</div>
                         </div>
                         <div class="row">
-                            <div class="col-4 stickiness-gusto-label text-right">
+                            <div class="col-5 pr-0 stickiness-gusto-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.stickiness_gusto_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.stickiness_gusto }}</span>
                             </div>
@@ -90,20 +90,20 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-4 aesthetic-luck-label text-right">
+                            <div class="col-5 pr-0 aesthetic-luck-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aesthetic_luck_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aesthetic_luck }}</span>
                             </div>
                             <div class="col-2 aesthetic-luck text-left" id="fertilizerAestheticLuck">0</div>
 
-                            <div class="col-4 toxicity-label text-right">
+                            <div class="col-3 toxicity-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.toxicity_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.toxicity }}</span>
                             </div>
                             <div class="col-2 toxicity text-left" id="fertilizerToxicity">0</div>
                         </div>
                         <div class="row">
-                            <div class="col-4 armor-magic-label text-right">
+                            <div class="col-5 pr-0 armor-magic-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic }}</span>
                             </div>
@@ -114,22 +114,22 @@
                             <ul class="list-group" id="lstFertilizerHints"></ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-5 pl-lg-2">
                         <div class="card">
                             <div class="card-header text-center">
                                 {{ site.data.strings.fertilizer_helper.fertilizer.components.title }}
                             </div>
                             <div class="card-body p-0">
-                                <ul class="list-group" id="lstFertilizeComponents">
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
-                                    <li class="list-group-item">-</li>
+                                <ul class="list-group list-group-flush" id="lstFertilizeComponents">
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
+                                    <li class="list-group-item list-group-item-light">-</li>
                                 </ul>
                             </div>
                         </div>
@@ -139,9 +139,9 @@
         </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 pl-lg-2">
         <div class="card">
-            <div class="card-header text-center pb-0 pt-2">
+            <div class="card-header card-header-nav-tabs text-center">
                 <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                         <a class="nav-link active" id="nav-inventory-tab" data-toggle="tab" href="#nav-inventory" role="tab" aria-controls="nav-inventory" aria-selected="true">{{ site.data.strings.fertilizer_helper.inventory.additional_components.title }}</a>
