optimize event calls

--- a/_includes/fertilizer_helper.html
+++ b/_includes/fertilizer_helper.html
@@ -47,46 +47,46 @@
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.yield_hp_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.yield_hp }}</span>
                             </div>
-                            <div class="col-2 yield-hp text-left" id="fertilizerYieldHp">0</div>
+                            <div class="col-2 yield-hp text-left pr-0" id="fertilizerYieldHp">0</div>
 
                             <div class="col-3 pr-0 immunuity-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.immunity }}</span>
                             </div>
-                            <div class="col-2 immunuity text-left" id="fertilizerImmunuity">0</div>
+                            <div class="col-2 immunuity text-left pr-0" id="fertilizerImmunuity">0</div>
                         </div>
                         <div class="row">
                             <div class="col-5 pr-0 taste-strength-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.taste_strength_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.taste_strength }}</span>
                             </div>
-                            <div class="col-2 taste-strength text-left" id="fertilizerTasteStrength">0</div>
+                            <div class="col-2 taste-strength text-left pr-0" id="fertilizerTasteStrength">0</div>
 
                             <div class="col-3 pr-0 pesticide-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.pesticide_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.pesticide }}</span>
                             </div>
-                            <div class="col-2 pesticide text-left" id="fertilizerPesticide">0</div>
+                            <div class="col-2 pesticide text-left pr-0" id="fertilizerPesticide">0</div>
                         </div>
                         <div class="row">
                             <div class="col-5 pr-0 hardness-vitality-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.hardness_vitality_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.hardness_vitality }}</span>
                             </div>
-                            <div class="col-2 hardness-vitality text-left" id="fertilizerHardnessVitality">0</div>
+                            <div class="col-2 hardness-vitality text-left pr-0" id="fertilizerHardnessVitality">0</div>
 
                             <div class="col-3 pr-0 herbicide-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.herbicide_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.herbicide }}</span>
                             </div>
-                            <div class="col-2 herbicide text-left" id="fertilizerHerbicide">0</div>
+                            <div class="col-2 herbicide text-left pr-0" id="fertilizerHerbicide">0</div>
                         </div>
                         <div class="row">
                             <div class="col-5 pr-0 stickiness-gusto-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.stickiness_gusto_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.stickiness_gusto }}</span>
                             </div>
-                            <div class="col-2 stickiness-gusto text-left" id="fertilizerStickinessGusto">0</div>
+                            <div class="col-2 stickiness-gusto text-left pr-0" id="fertilizerStickinessGusto">0</div>
 
                         </div>
                         <div class="row">
@@ -94,20 +94,20 @@
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aesthetic_luck_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.aesthetic_luck }}</span>
                             </div>
-                            <div class="col-2 aesthetic-luck text-left" id="fertilizerAestheticLuck">0</div>
+                            <div class="col-2 aesthetic-luck text-left pr-0" id="fertilizerAestheticLuck">0</div>
 
                             <div class="col-3 toxicity-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.toxicity_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.toxicity }}</span>
                             </div>
-                            <div class="col-2 toxicity text-left" id="fertilizerToxicity">0</div>
+                            <div class="col-2 toxicity text-left pr-0" id="fertilizerToxicity">0</div>
                         </div>
                         <div class="row">
                             <div class="col-5 pr-0 armor-magic-label text-right">
                                 <span class="d-sm-none">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic_short }}</span>
                                 <span class="d-none d-sm-inline">{{ site.data.strings.fertilizer_helper.fertilizer.stats.armor_magic }}</span>
                             </div>
-                            <div class="col-2 armor-magic text-left" id="fertilizerArmorMagic">0</div>
+                            <div class="col-2 armor-magic text-left pr-0" id="fertilizerArmorMagic">0</div>
 
                         </div>
                         <div class="row mt-2">
@@ -150,7 +150,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="card-body p-0 my-2 mt-3">
+            <div class="card-body p-0 my-2">
                 <div class="tab-content" id="nav-inventory-tabContent">
                     <div class="tab-pane fade show active" id="nav-inventory" role="tabpanel" aria-labelledby="nav-inventory-tab">
                         <div class="row no-gutters">
